# gilda

./: .gitignore  .pre-commit-config.yaml  config.yaml  hugo.toml  makefile  package-lock.json  package.json  pyproject.toml
.github/workflows/: hugo_publisher.yml
content/: _index.md
content/bestiario/: _index.md
content/bestiario/berseker/: index.md
content/bestiario/fenice-lunare/: index.md
content/bestiario/parassita-carceriere/: index.md
content/bestiario/parassita-carceriere-madre/: index.md
content/corso/: _index.md
content/corso/corso-di-alchimia/: index.md
content/corso/corso-di-atletica/: index.md
content/corso/corso-di-belle-arti-base-pacchetto-argento/: index.md
content/corso/corso-di-belle-arti-base-pacchetto-oro/: index.md
content/corso/corso-di-belle-arti-base-pacchetto-rame/: index.md
content/corso/corso-di-ingegneria-base-argento/: index.md
content/corso/corso-di-ingegneria-base-oro/: index.md
content/corso/corso-di-ingegneria-base-rame/: index.md
content/corso/corso-di-magia/: index.md
content/corso/corso-di-medicina/: index.md
content/corso/corso-di-musica-argento/: index.md
content/corso/corso-di-musica-oro/: index.md
content/corso/corso-di-musica-rame/: index.md
content/corso/corso-di-sopravvivenza/: index.md
content/corso/corso-di-tiro-con-l-arco/: index.md
content/linea-temporale/: _index.md
content/lore/: _index.md
content/membro/: _index.md
content/personaggio/: _index.md
content/quest/: _index.md
content/spazio/: _index.md
scripts/: new_post.py
static/: CNAME
themes/dnd_guild/: hugo.toml
(+145 files in other folders)
